--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -14,6 +14,12 @@ h1 > a {
   font-size: 1.5em;
 }
 
+h2 > a {
+  text-decoration: none;
+  color: white;
+  font-size: 1.2em;
+}
+
 .search {
   padding-right: 10%;
 }
@@ -69,4 +75,76 @@ body {
 #detail {
   background-color: 801515 !important;
   color: white;
+}
+
+.loading {
+  grid-column: 1/4;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.wrapper {
+  margin: 32px;
+  text-align: center;
+  perspective: 800px;
+}
+
+.cover {
+  display: inline-block;
+  width: 200px;
+  height: 144px;
+  border: 8px solid #aa3939;
+  border-radius: 4px;
+  box-sizing: border-box;
+  background-color: #fff;
+  z-index: 1;
+}
+
+@keyframes browzePage {
+  0% {
+    transform: rotateY(0deg);
+    background-color: #fff;
+  }
+  50% {
+    background-color: #f2f2f2;
+  }
+  100% {
+    transform: rotateY(-180deg);
+    background-color: #fff;
+  }
+}
+
+.page {
+  display: inline-block;
+  width: 100px;
+  height: 144px;
+  border-width: 8px 8px 8px 0;
+  border-radius: 4px;
+  border-style: solid;
+  border-color: #aa3939;
+  background-color: #fff;
+  box-sizing: border-box;
+  left: -104px;
+  position: relative;
+  z-index: 2;
+  transform-style: preserve-3d;
+  transition: transform 1s;
+  transform-origin: left top;
+  animation: browzePage 1s infinite;
+}
+
+.inner-border {
+  display: inline-block;
+  width: 1px;
+  height: 144px;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.06);
+  z-index: 3;
+}
+
+.wrapper {
+  padding-left: 10%;
 }
