--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -35,12 +35,24 @@ body {
   grid-template-columns: 33% 33% 33%;
 }
 
+.book > a {
+  text-decoration: none;
+  font-size: 1.2em;
+  color: white;
+  border: 2px solid;
+  padding: 5px;
+  margin-bottom: 30px;
+  border-radius: 3px;
+}
+
 .books > div {
   padding: 2%;
   margin: 3%;
   background-color: #d46a6a;
   border: 3px solid #aa3939;
   border-radius: 5px;
+  padding-bottom: 5%;
+  text-align: center;
 }
 
 .searchTerm {
@@ -78,6 +90,11 @@ body {
   justify-content: center;
   align-items: center;
   text-align: center;
+}
+
+#relatedLoading > h1 {
+  font-size: 5em;
+  animation: rotateLoader 1s infinite;
 }
 
 #detail {
@@ -126,6 +143,15 @@ body {
   100% {
     transform: rotateY(-180deg);
     background-color: #fff;
+  }
+}
+
+@keyframes rotateLoader {
+  0% {
+    transform: rotateY(0deg);
+  }
+  100% {
+    transform: rotateY(-180deg);
   }
 }
 
